# rafn

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  action.yml  buf.gen.yaml  buf.yaml  pyproject.toml  rafn.toml
.beads/: config.yaml  issues.jsonl  last_pull
.github/: renovate.json5
.github/workflows/: ci.yml  release.yml  smoke.yml
benches/: core_benchmarks.rs  parser_benchmarks.rs
crates/cli/: Cargo.toml
crates/cli/src/: api.rs  config_file.rs  discovery.rs  git.rs  main.rs  runner.rs
crates/cli/src/commands/: compare.rs  config.rs  export.rs  ingest.rs  mod.rs  query.rs  run.rs  trend.rs
crates/ingest/: Cargo.toml
crates/ingest/benches/: parser_benchmarks.rs
crates/ingest/src/: auto_detect.rs  error.rs  lib.rs  parser.rs
crates/ingest/src/parsers/: benchmarkdotnet.rs  criterion.rs  google_benchmark.rs  jmh.rs  mod.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/benches/: core_benchmarks.rs
crates/proto/src/: benchmark.rs  lib.rs  metrics.rs
examples/cpp/google_benchmark/: CMakeLists.txt  Dockerfile  README.md  fibonacci_benchmark.cpp  rafn.toml
examples/csharp/benchmarkdotnet/: Dockerfile  Program.cs  README.md
examples/java/jmh/: Dockerfile  README.md  pom.xml  rafn.toml
examples/java/jmh/src/main/java/com/perfscope/example/: FibonacciBenchmark.java
examples/java/jmh/src/main/java/dev/rafn/example/: FibonacciBenchmark.java
examples/rust/criterion/: Cargo.toml  Dockerfile  README.md
examples/rust/criterion/benches/: sample_bench.rs
examples/rust/criterion/src/: lib.rs
npm/@rafn/cli-darwin-arm64/: package.json
npm/@rafn/cli-darwin-x64/: package.json
npm/@rafn/cli-linux-arm64/: package.json
npm/@rafn/cli-linux-x64/: package.json
npm/@rafn/cli-win32-x64/: package.json
npm/rafn/: package.json
proto/perfscope/v1/: benchmark.proto  ingest.proto
src/: api.rs  comparison.rs  discovery.rs  framework.rs  git.rs  lib.rs  lock.rs  main.rs  runner.rs
src/commands/: bench.rs  bisect.rs  compare.rs  config.rs  ingest.rs  init.rs  mod.rs  push.rs  run.rs  trend.rs
src/config/: effective.rs  mod.rs  repo.rs  repository.rs  user.rs
src/ingest/: auto_detect.rs  error.rs  mod.rs  parser.rs
src/ingest/parsers/: benchmarkdotnet.rs  criterion.rs  google_benchmark.rs  jmh.rs
src/proto/: benchmark.rs  error.rs  mod.rs
src/store/: local.rs  mod.rs  remote.rs
