[package]
name = "rafn"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A lightweight benchmark uploader for perfscope"
repository = "https://github.com/voron-software/rafn"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rafn-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/rafn-{ target }.zip"
pkg-fmt = "zip"

[lib]
name = "rafn"
path = "src/lib.rs"

[[bin]]
name = "rafn"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# gRPC
tonic = { version = "0.12" }
prost = { version = "0.13" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
tabled = "0.20"
colored = "3.1"

# HTTP client (for read endpoints)
reqwest = { version = "0.13", features = ["json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data types
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "parser_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
