[package]
name = "rafn"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A lightweight benchmark uploader for perfscope"
repository = "https://github.com/voron-software/rafn"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rafn-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/rafn-{ target }.zip"
pkg-fmt = "zip"

[lib]
name = "rafn"
path = "src/lib.rs"

[[bin]]
name = "rafn"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Configuration loading (file + env layering)
config = { version = "0.15", default-features = false, features = ["toml"] }

# gRPC
tonic = { version = "0.14" }
prost = { version = "0.14" }
tonic-prost = "0.14"
prost-types = "0.14"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
tabled = "0.21"
colored = "3.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data types
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# URL parsing (git remote URLs)
url = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "parser_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
