[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "rafn"
dynamic = ["version"]
description = "A lightweight benchmark uploader"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = ["benchmarking", "performance", "cli"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Repository = "https://github.com/voron-software/rafn"

[tool.maturin]
bindings = "bin"
