[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rafn"
path = "src/main.rs"

[dependencies]
proto = { workspace = true }
ingest = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tabled = { workspace = true }
colored = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
