[package]
name = "ingest"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parser_benchmarks"
harness = false
