[package]
name = "proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
